# src/main/java/com/paucar/accountms/controller/CuentaController.java
@@ -64,7 +64,8 @@ public class CuentaController {
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<ApiResponse<CuentaDTO>> actualizarCuenta(@PathVariable Long id, @Valid @RequestBody CuentaDTO cuentaDTO) {
+    public ResponseEntity<ApiResponse<CuentaDTO>> actualizarCuenta(@PathVariable Long id,
+                                                                   @Valid @RequestBody CuentaDTO cuentaDTO) {
         CuentaDTO cuentaActualizada = cuentaService.actualizarCuenta(id, cuentaDTO);
         ApiResponse<CuentaDTO> respuesta = ApiResponse.<CuentaDTO>builder()
                 .estado(HttpStatus.OK.value())
@@ -95,9 +96,10 @@ public class CuentaController {
         return new ResponseEntity<>(respuesta, HttpStatus.NO_CONTENT);
     }
 
-    @PutMapping("/depositar/{id}")
-    public ResponseEntity<ApiResponse<CuentaDTO>> depositar(@PathVariable Long id, @RequestParam Double monto) {
-        CuentaDTO cuentaActualizada = cuentaService.depositar(id, monto);
+    @PutMapping("/depositar")
+    public ResponseEntity<ApiResponse<CuentaDTO>> depositar(@RequestParam String numeroCuenta,
+                                                            @RequestParam Double monto) {
+        CuentaDTO cuentaActualizada = cuentaService.depositar(numeroCuenta, monto);
         ApiResponse<CuentaDTO> respuesta = ApiResponse.<CuentaDTO>builder()
                 .estado(HttpStatus.OK.value())
                 .mensaje("Depósito realizado con éxito")
@@ -106,9 +108,10 @@ public class CuentaController {
         return new ResponseEntity<>(respuesta, HttpStatus.OK);
     }
 
-    @PutMapping("/retirar/{id}")
-    public ResponseEntity<ApiResponse<CuentaDTO>> retirar(@PathVariable Long id, @RequestParam Double monto) {
-        CuentaDTO cuentaActualizada = cuentaService.retirar(id, monto);
+    @PutMapping("/retirar")
+    public ResponseEntity<ApiResponse<CuentaDTO>> retirar(@RequestParam String numeroCuenta,
+                                                          @RequestParam Double monto) {
+        CuentaDTO cuentaActualizada = cuentaService.retirar(numeroCuenta, monto);
         ApiResponse<CuentaDTO> respuesta = ApiResponse.<CuentaDTO>builder()
                 .estado(HttpStatus.OK.value())
                 .mensaje("Retiro realizado con éxito")
@@ -116,4 +119,30 @@ public class CuentaController {
                 .build();
         return new ResponseEntity<>(respuesta, HttpStatus.OK);
     }
+
+    @PutMapping("/realizar-transferencia")
+    public ResponseEntity<ApiResponse<Boolean>> transferencia(@RequestParam String cuentaOrigen,
+                                                              @RequestParam String cuentaDestino,
+                                                              @RequestParam Double monto){
+
+        boolean estadoTransferencia = cuentaService.transferir(cuentaOrigen, cuentaDestino, monto);
+
+        ApiResponse<Boolean> respuesta;
+        if (estadoTransferencia) {
+            respuesta = ApiResponse.<Boolean>builder()
+                    .estado(HttpStatus.OK.value())
+                    .mensaje("Transferencia realizada con éxito")
+                    .datos(true)
+                    .build();
+        } else {
+            respuesta = ApiResponse.<Boolean>builder()
+                    .estado(HttpStatus.BAD_REQUEST.value())
+                    .mensaje("No se pudo realizar la transferencia")
+                    .datos(false)
+                    .build();
+        }
+
+        return new ResponseEntity<>(respuesta, HttpStatus.OK);
+    }
+
 }
